[package]
name = "simple-repl"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A very simple base for an interactive repl / interactive CLI."
homepage = "https://github.com/YthingLLC/simple-repl"
repository = "https://github.com/YthingLLC/simple-repl"
documentation = "https://github.com/YthingLLC/simple-repl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"
